--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lunch"
+        android:text="Loading..."
         android:id="@+id/titleTextView"
         android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
         android:textSize="30dp"
         android:fontFamily="sans-serif"
-        android:background="#000000"
-        android:textColor="#f9f93d"
+        android:background="@color/backgroundColor"
+        android:textColor="@color/textColor"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
