--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="backgroundColor">#000000</color>
     <color name="textColor">#f9f93d</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="bruinBlue">#3F51B5</color>
+    <color name="bruinBlueDark">#303F9F</color>
 </resources>
