--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="backgroundColor">#000000</color>
-    <color name="textColor">#f9f93d</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="bruinBlue">#3F51B5</color>
-    <color name="bruinBlueDark">#303F9F</color>
+    <color name="colorPrimary">#003D99</color>#1975FF
+    <color name="colorPrimaryDark">#5CADFF</color>
+    <color name="backgroundColor">#1975FF</color>
+    <color name="textColor">#FFFFFF</color>
+    <color name="colorAccent">#CCFFFF</color>
 </resources>
