--- a/app/src/main/res/layout/fragment_swipes_left.xml
+++ b/app/src/main/res/layout/fragment_swipes_left.xml
@@ -2,7 +2,143 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="zhou.allen.bruinmenu.SwipesLeftFragment">
 
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Swipes Page.... TODO" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark">
+        <RelativeLayout
+            android:id="@+id/p14Layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="200dip"
+                android:layout_height="100dp"
+                android:fontFamily="sans-serif-thin"
+                android:text="14P"
+                android:textSize="50dp"
+                android:padding="20dip"
+                android:textColor="#000000"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/p14Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="NaN"
+                android:padding="10dip"
+                android:layout_margin="20dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="@color/colorPrimary"
+                android:background="@drawable/rounded_edges"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/r14Layout"
+            android:layout_below="@id/p14Layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="200dip"
+                android:layout_height="100dp"
+                android:fontFamily="sans-serif-thin"
+                android:text="14"
+                android:textSize="50dp"
+                android:padding="20dip"
+                android:textColor="#000000"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/r14Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="NaN"
+                android:padding="10dip"
+                android:layout_margin="20dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="@color/colorPrimary"
+                android:background="@drawable/rounded_edges"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/p19Layout"
+            android:layout_below="@id/r14Layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="200dip"
+                android:layout_height="100dp"
+                android:fontFamily="sans-serif-thin"
+                android:text="19P"
+                android:textSize="50dp"
+                android:padding="20dip"
+                android:textColor="#000000"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/p19Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="NaN"
+                android:padding="10dip"
+                android:layout_margin="20dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="@color/colorPrimary"
+                android:background="@drawable/rounded_edges"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/r19Layout"
+            android:layout_below="@id/p19Layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="200dip"
+                android:layout_height="100dp"
+                android:fontFamily="sans-serif-thin"
+                android:text="19"
+                android:textSize="50dp"
+                android:padding="20dip"
+                android:textColor="#000000"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/r19Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-thin"
+                android:text="NaN"
+                android:padding="10dip"
+                android:layout_margin="20dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="@color/colorPrimary"
+                android:background="@drawable/rounded_edges"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+    </RelativeLayout>
 </FrameLayout>
