--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -13,11 +13,90 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/credits"
-        android:id="@+id/textView2"
+        android:id="@+id/credits"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="Easter Egg"
+        android:id="@+id/easterButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/transparent"/>
+
+    <ImageButton
+        android:src="@drawable/down_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/downButton"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/leftButton"
+        android:layout_toEndOf="@+id/leftButton" />
+
+    <ImageButton
+        android:src="@drawable/lefter_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/leftButton"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:layout_above="@+id/easterButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:src="@drawable/up_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/upButton"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:layout_above="@+id/leftButton"
+        android:layout_toRightOf="@+id/leftButton"
+        android:layout_toEndOf="@+id/leftButton" />
+
+    <ImageButton
+        android:src="@drawable/righter_arrow"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/rightButton"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:layout_below="@+id/upButton"
+        android:layout_toRightOf="@+id/upButton"
+        android:layout_toEndOf="@+id/upButton" />
+
+    <ImageButton
+        android:src="@drawable/a_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/aButton"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:layout_marginLeft="41dp"
+        android:layout_marginStart="41dp"
+        android:layout_alignTop="@+id/rightButton"
+        android:layout_toRightOf="@+id/rightButton"
+        android:layout_toEndOf="@+id/rightButton" />
+
+    <ImageButton
+        android:src="@drawable/b_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/bButton"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:layout_above="@+id/aButton"
+        android:layout_toRightOf="@+id/aButton"
+        android:layout_toEndOf="@+id/aButton" />
 </RelativeLayout>
