Started working on different separating food and kitchen

--- a/app/src/main/res/layout/fragment_swipes_left.xml
+++ b/app/src/main/res/layout/fragment_swipes_left.xml
@@ -5,7 +5,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:background="#FFFFFF">
         <RelativeLayout
             android:id="@+id/p14Layout"
             android:layout_width="match_parent"
@@ -30,8 +30,8 @@
                 android:text="NaN"
                 android:padding="10dip"
                 android:layout_margin="20dp"
-                android:textColor="#FFFFFF"
-                android:backgroundTint="@color/colorPrimary"
+                android:textColor="#000000"
+                android:backgroundTint="@color/colorAccent"
                 android:background="@drawable/rounded_edges"
                 android:layout_gravity="center"
                 android:layout_centerVertical="true"
@@ -64,8 +64,8 @@
                 android:text="NaN"
                 android:padding="10dip"
                 android:layout_margin="20dp"
-                android:textColor="#FFFFFF"
-                android:backgroundTint="@color/colorPrimary"
+                android:textColor="#000000"
+                android:backgroundTint="@color/colorAccent"
                 android:background="@drawable/rounded_edges"
                 android:layout_gravity="center"
                 android:layout_centerVertical="true"
@@ -98,8 +98,8 @@
                 android:text="NaN"
                 android:padding="10dip"
                 android:layout_margin="20dp"
-                android:textColor="#FFFFFF"
-                android:backgroundTint="@color/colorPrimary"
+                android:textColor="#000000"
+                android:backgroundTint="@color/colorAccent"
                 android:background="@drawable/rounded_edges"
                 android:layout_gravity="center"
                 android:layout_centerVertical="true"
@@ -132,8 +132,8 @@
                 android:text="NaN"
                 android:padding="10dip"
                 android:layout_margin="20dp"
-                android:textColor="#FFFFFF"
-                android:backgroundTint="@color/colorPrimary"
+                android:textColor="#000000"
+                android:backgroundTint="@color/colorAccent"
                 android:background="@drawable/rounded_edges"
                 android:layout_gravity="center"
                 android:layout_centerVertical="true"
