--- a/app/src/main/res/layout/list_kitchen.xml
+++ b/app/src/main/res/layout/list_kitchen.xml
@@ -12,6 +12,6 @@
         android:textStyle="bold"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingLeft="20dp" />
 
 </LinearLayout>
