Vegetarian and Favorite buttons appear based on menuItem (not tested)

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:src="@drawable/vegetarian"
+        android:visibility="invisible"
         android:background="@android:color/transparent"
         android:layout_width="35dp"
         android:layout_height="35dp"
