--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_credits" android:title="Credits"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_settings" android:title="Settings"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
