Doesn't send notification on refresh by default

--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -6,4 +6,11 @@
         android:title = "Show notifications with favorite food"
         android:defaultValue="true" />
 
+    <CheckBoxPreference
+        android:key="notification_switch_refresh"
+        android:title = "Show notifications with favorite food whenever you refresh"
+        android:defaultValue="false" />
+
+    
+
 </PreferenceScreen>
