--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -3,14 +3,12 @@
 
     <CheckBoxPreference
         android:key="notification_switch"
-        android:title = "Show notifications with favorite food"
+        android:title = "Show favorite food notifications"
         android:defaultValue="true" />
 
     <CheckBoxPreference
         android:key="notification_switch_refresh"
-        android:title = "Show notifications with favorite food whenever you refresh"
+        android:title = "Show notifications on refresh"
         android:defaultValue="false" />
-
-    
 
 </PreferenceScreen>
