--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,20 +23,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/appbarlayout"/>
 
+    <Spinner
+        android:id="@+id/updateSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@android:id/list" />
+
     <Button
         android:id="@+id/pickerbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#F0F0F0"
-        android:text="PICK START TIME"
-        android:layout_below="@android:id/list" />
-
-    <Button
-        android:id="@+id/updateFbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#F0F0F0"
-        android:text="PICK START TIME"
-        android:layout_below="@+id/pickerbutton" />
-
+        android:text="Pick Start Time"
+        android:layout_below="@+id/updateSpinner" />
 </RelativeLayout>
