--- a/app/src/main/res/layout/activity_quick_dining_menus.xml
+++ b/app/src/main/res/layout/activity_quick_dining_menus.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_quick_dining_menus"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rhombus.bruinmenu.QuickDiningMenusActivity">
+
+    <it.neokree.materialtabs.MaterialTabHost
+        android:id="@+id/quickDining_materialTabHost"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:textColor="@color/textColor"
+        app:primaryColor="@color/backgroundColor"
+        app:accentColor="@color/colorAccent"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/quickDining_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_below="@+id/quickDining_materialTabHost" />
+
 
 </RelativeLayout>
